--- a/bitservice/src/Components/Footer/Footer.css
+++ b/bitservice/src/Components/Footer/Footer.css
@@ -1,15 +1,31 @@
-.main-footer {
+.footer {
     width: 100%;
-    height: 3.5rem;
-    background-color: #575757;
-  
+    height: 15rem;
+    background-color: #000000;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: flex-end;
+    justify-content: space-evenly;
 }
 
-.main-footer__copyright {
-    text-align: center;
+.footer__logo-image {
+    height: 15rem;
+    width: 30rem;
+}
+
+.footer__info {
     color: white;
+}
+
+@media only screen and (max-width: 920px) {
+    .footer {
+        flex-direction: column;
+        height: 30rem;
+        align-items: center;
+    }
+
+}
+
+@media only screen and (max-width: 449px) {
+    .footer__logo-image {
+        width: 20rem;
+    }
 }
