--- a/bitservice/src/Components/Navigation/Navigation.css
+++ b/bitservice/src/Components/Navigation/Navigation.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     background-color: white;
-    height: 8rem;
+    height: 4rem;
 }
 
 .nav ul {
@@ -21,10 +21,42 @@
 
 .nav__links ul li {
     padding-right: 3rem;
-    margin-top: 3rem;
+    margin-top: 1.3rem;
 }
 
 .nav__text {
-    margin-top: 3rem;
+    margin-top: 0.7rem;
     padding-left: 7rem;
+}
+
+@media only screen and (max-width: 783px) {
+    .nav__links ul li {
+        padding-right: 1rem;
+    }
+
+    .nav__text {
+        padding-left: 0;
+    }
+}
+
+
+@media only screen and (max-width: 507px) {
+    .nav {
+        height: 16rem;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .nav__links ul {
+        flex-direction: column;
+        margin-top: 0;
+    }
+
 }
