--- a/bitservice/src/CSS/Requests.css
+++ b/bitservice/src/CSS/Requests.css
@@ -8,4 +8,51 @@
 
 .sendRequest {
     margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+.request_options {
+    width: 100%;
+    padding: 16px 20px;
+    border-radius: 4px;
+    background-color: #f1f1f1;
+    margin-top: 0.5rem;
+}
+
+.input_ip {
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 3px solid #ccc;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+}
+
+.input_ip:focus {
+    border: 3px solid #555;
+}
+
+
+.submit_btn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+    margin-top: 0.8rem;
+}
+
+.submit_btn:hover {
+    background-color: #45a049;
+}
+
+.apiResponse {
+    margin-top: 0.8rem;
+}
+  
+
